# better_transit

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  sst.config.ts
.github/workflows/: ci.yml  (+2 more)
api/: .env  .env.example  Dockerfile  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 1c574e68e454_initial_gtfs_tables.py
api/src/better_transit/: config.py  db.py  handler.py  main.py
api/src/better_transit/gtfs/: downloader.py  importer.py  loader.py  models.py  parser.py  queries.py  schemas.py  time_utils.py
api/src/better_transit/models/: alerts.py  arrivals.py  routes.py  stops.py  trips.py  vehicles.py
api/src/better_transit/realtime/: client.py
api/src/better_transit/routes/: alerts.py  routes.py  stops.py  trips.py
api/src/better_transit/routing/: builder.py  data.py  raptor.py  results.py
api/tests/: test_config.py  test_handler.py  test_health.py  test_routes_api.py
api/tests/gtfs/: test_downloader.py  test_importer.py  test_integration.py  test_loader.py  test_models.py  test_parser.py  test_queries.py  test_schemas.py  test_time_utils.py
api/tests/gtfs/fixtures/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
api/tests/realtime/: test_client.py
api/tests/routing/: test_builder_cache.py  test_builder_patterns.py  test_raptor.py
docs/: ARCHITECTURE.md  DECISIONS_PENDING.md  PRD.md  REVIEW_NOTES.md  SECURITY_AUDIT.md
infra/: package.json  sst.config.ts
web/: angular.json  package-lock.json  package.json
(+26 files in other folders)
